# lab

./: .gitignore  .gitmodules  README.md  note.txt
image_processing/segmentation/: CMakeLists.txt  segmentation.cpp
image_processing/test/: CMakeLists.txt  README.md  rs-imshow.cpp  test.cpp
reinforcement_learning/: create_graph_reward_function.py  create_ingredient_positions_manually.py  evaluation_mixing.py  load_model.py  plot_scores.py  pyproject.toml  render.py  render_mujoco_viewer.py  replay_buffer.py  setup.cfg  test_param.py  tidy.conf  train_ddpg.py
reinforcement_learning/envs/: __init__.py
reinforcement_learning/envs/linear_actuator_array/: create_xml.py  linear_actuator_array_config.py  linear_actuator_array_env.py
reinforcement_learning/envs/linear_actuator_array/xmls/: linear_actuator_array-v0.xml
reinforcement_learning/envs/stir/: i_stir_env.py  mujoco_model_utils.py  stir_env.py  stir_env0.py  stir_env1.py  stir_env2.py  stir_env3.py  stir_env_specialization.py  stir_env_xy_position_ingredients8_stir_with_moving_ingredients.py  stir_env_xyz_ingredients8_stir.py  stir_env_xyz_move_ingredient.py  stir_env_xyz_move_ingredient_target.py  stir_env_xyz_move_ingredients.py  stir_env_xyz_move_tools.py  stir_env_xyz_position.py  stir_env_xyz_position_ingredients8_keep_moving_ingredients.py  stir_env_xyz_position_ingredients8_move_tool.py  stir_env_xyz_position_ingredients8_stir.py  stir_env_xyz_position_ingredients8_stir_with_moving_ingredients.py  stir_env_xyz_position_move_tool.py  stir_env_xyz_stir_ingredients.py  stir_env_xyz_touch_ingredient.py  stir_env_xyz_touch_ingredients.py  stir_env_xyz_velocity_ingredient4.py  stir_gazebo_env.py  stir_grid_env.py  stir_mujoco_env.py  stir_util.py  stir_utils.py
reinforcement_learning/envs/stir/config/: bowl_param.yaml
reinforcement_learning/envs/stir/mesh/: bowl4.stl  bowl5.stl
reinforcement_learning/envs/stir/meshes/: cooking_bowl_bottom.stl  cooking_bowl_fragment.stl
reinforcement_learning/envs/stir/xmls/: stir-ingredients4_toolxy.xml  stir-ingredients4_toolxyz.xml  stir-ingredients8_toolxy.xml  stir-toolxyz.xml  stir-v0.xml  stir-v1.xml  stir-v2.xml  stir-v3.xml  stir-v4.xml  stir-v5.xml  stir_actuator_position_all.xml  stir_actuator_position_xy.xml  stir_actuator_position_xyz.xml  stir_actuator_velocity_all.xml  stir_actuator_velocity_xy.xml  stir_bowl.xml  stir_bowl_height8.xml  stir_contact.xml  stir_contact1.xml  stir_contact8.xml  stir_header.xml  stir_ingredients_13cube1.xml  stir_ingredients_13cube4.xml  stir_ingredients_13cube8.xml  stir_ingredients_30cube4.xml  stir_worldbody.xml  stir_worldbody_height8.xml
reinforcement_learning/scripts/: demo_ddpg_latest.sh  train_ddpg_gazebo.sh  train_ddpg_mujoco.sh
reinforcement_learning/utils/: create_xml.py
ros/gazebo_bridge/: CMakeLists.txt  note.cmake  package.xml  setup.py
ros/gazebo_bridge/src/: bridge.cpp  bridge.hpp
ros/stir_bringup/: CMakeLists.txt  package.xml
ros/stir_bringup/config/: crane_x7_position_controllers.yaml  crane_x7_velocity_controllers.yaml
ros/stir_bringup/launch/: stir_demo.launch  stir_gazebo.launch
ros/stir_description/: CMakeLists.txt  package.xml
ros/stir_description/config/: crane_x7_with_tools.srdf
ros/stir_description/launch/: stir.launch  stir_rviz.launch
ros/stir_description/meshes/: bowl1.stl  bowl5.stl
ros/stir_description/models/cooking_bowl/: model.config  model.sdf
ros/stir_description/models/cooking_bowl/meshes/: cooking_bowl_bottom.stl  cooking_bowl_fragment.stl
ros/stir_description/models/ingredient_cube/: model.config  model.sdf
ros/stir_description/robot/: crane_x7_with_tools.urdf.xacro  stir.urdf.xacro  tools.xacro
ros/stir_description/rviz/: urdf.rviz
ros/stir_description/worlds/: stir.world
ros/stir_ros/: CMakeLists.txt  package.xml  setup.py
ros/stir_ros/config/: moveit_servo.yaml  pose_tracking_settings.yaml
ros/stir_ros/launch/: bringup_servo.launch  pose_tracker.launch
ros/stir_ros/scripts/: publish_commands.py  run_moveit_servo.py
ros/stir_ros/src/: bringup_servo.cpp  bringup_servo.hpp  bringup_servo_node.cpp  pose_tracker.cpp  pose_tracker.hpp  pose_tracking_node.cpp
ros/stir_ros/src/stir_ros/: __init__.py  command_order_sorter.py  stir.py
stir_envs/: render.py  stir_env.py
stir_envs/mesh/: bowl3.stl
stir_envs/xmls/: stir-v0.xml
