<?xml version="1.0"?>
<package format="2">
  <name>stir_bringup</name>
  <version>0.0.0</version>
  <description>The stir_bringup package</description>
  <maintainer email="sattyorin@todo.todo">sattyorin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>crane_x7_moveit_config</build_depend>
  <exec_depend>crane_x7_moveit_config</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>stir_description</exec_depend>
</package>
