<?xml version="1.0"?>
<package format="2">
  <name>stir_ros</name>
  <version>0.0.0</version>
  <description>The stir_ros package</description>
  <maintainer email="sattyorin@todo.todo">sattyorin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>moveit_commander</exec_depend>
</package>
