<?xml version="1.0"?>
<package format="2">
  <name>stir_ros</name>
  <version>0.0.0</version>
  <description>The stir_ros package</description>
  <maintainer email="sattyorin@todo.todo">sattyorin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>moveit_commander</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>
</package>
